clusters/dextek/apps/flux-system/add-ons/webhook/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    external-dns.alpha.kubernetes.io/target: "ingress.plexuz.xyz"
spec:
  ingressClassName: external
  rules:
    - host: fluxhook.plexuz.xyz
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: webhook-receiver
                port:
                  name: http
